<resources>
	<string name="app_name">Alcohol Calendar</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

    <string name="menu_statistics">Statistics</string>
	<string name="menu_add_drink">Add Drink</string>
	<string name="menu_my_drinks">My Drinks</string>
	<string name="menu_calendar_view">Calendar View</string>
	<string name="menu_challenges">Challenges</string>
    <string name="last_7_days">Last 7 days</string>
	<string name="from">From</string>
	<string name="end">End</string>
	<string name="total_beer">Beer</string>
	<string name="total_wine">Wine</string>
	<string name="total_cocktails">Cocktails</string>
	<string name="total_shots">Shots</string>
	<string name="last_week">Last week</string>
	<string name="last_year">Last year</string>
	<string name="last_month">Last month</string>
	<string name="from_value">From value</string>
	<string name="end_value">End value</string>
	<string name="total_beer_value">Total beer value</string>
	<string name="total_wine_value">Total wine value</string>
	<string name="total_cocktail_value">Total cocktail value</string>
	<string name="total_shot_value">Total shot value</string>
	<string name="date">date</string>
    <string name="drink_name">Drink name</string>
	<string name="drink_percentage">Drink percentage</string>
	<string name="liter">Liter</string>
	<string name="amount">Amount</string>
    <string name="save_drink_type">Save drink type</string>
	<string name="save_drink">Save drink</string>
    <string name="drink_type">Drink Type</string>
    <string name="beer">Beer</string>
    <string name="you_have_no_drink_yet">You have no drink yet</string>
	<string name="undo_string">Undo</string>
	<string name="custom">Custom</string>
    <string name="update_drink">Update drink</string>
	<string name="choose_drink_type">Choose drink type</string>
    <string name="challenge_name">Challenge name</string>
	<string name="menu_challenge_details">Challenge details</string>
    <string name="challenges_unavailable">Challenges are unavailable.\nCheck your internet connection</string>
	<string name="statistics_unavailable">Statistics are unavailable.\nCheck your internet connection</string>
    <string name="statistics">Statistics</string>
    <string name="challenge_description">Challenge description</string>
    <string name="crash">Crash</string>
</resources>