<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_statistics">

    <fragment
        android:id="@+id/nav_statistics"
        android:name="hu.havasig.alcoholcalendar.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_add_drink"
        android:name="hu.havasig.alcoholcalendar.ui.addDrink.AddDrinkFragment"
        android:label="@string/menu_add_drink"
        tools:layout="@layout/fragment_add_drink">
        <argument
            android:name="drinkId"
            android:defaultValue="@null"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_drinks"
        android:name="hu.havasig.alcoholcalendar.ui.myDrinks.MyDrinksFragment"
        android:label="@string/menu_my_drinks"
        tools:layout="@layout/fragment_my_drinks" />

    <fragment
        android:id="@+id/nav_challenges"
        android:name="hu.havasig.alcoholcalendar.ui.challenges.list.ChallengesFragment"
        android:label="@string/menu_challenges"
        tools:layout="@layout/fragment_challenges" />

    <fragment
        android:id="@+id/nav_challenge_details"
        android:name="hu.havasig.alcoholcalendar.ui.challenges.details.ChallengeDetailsFragment"
        android:label="@string/menu_challenge_details"
        tools:layout="@layout/fragment_challenge_details">
        <argument
            android:name="challengeId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>